--- a/src/main/WebContent/Find/text.css
+++ b/src/main/WebContent/Find/text.css
@@ -12,107 +12,65 @@ a{
     color:#262626;
 }
 
-.login_wrapper{
-    position:absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  	width:330px;
-    height:380px;
-    top:50%;
-    left:50%;
-    margin: -175px 0px 0px -190px;
-    background-color:white;
-
-}
-
-.login_logo{
-    margin :30px 0 30px 0;
-    color:#262626;
-    font-family: 'Lobster', cursive;
-    font-size: 40px;
-    font-weight: 100px;
-}
-
-.login_form{
-    display:flex;
-     align-items: center;
-    flex-direction: column;
-    width:350px;
-    margin-top:10px;
-}
-
-.login_text{
-    width:100%;
-    height:40px;
-    margin: 3px 0 3px 0 ;
-    padding: 0 10px 0 10px;
-    background-color:#FAFAFA;
-    border: 1px solid #DBDBDB;
-    border-radius: 3px;
-    font-size:15px;
-}
-
-.login_text:focus{
-    outline: 1px solid #a8a8a8;
-}
-
-.login_text::placeholder{
-    color:#8E8E8E;
-}
-
-.login_text::value{
-    color:#262626;
-}
-
-.login_btn{
-    width:100%;
-    height:33px;
-    margin: 10px 0 5px 0;
-    color:white;
-    background-color: #C0DFFD;
-    border-radius: 5px;
-    border-style: none;
-    font-size: 15px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.login_bottom{
-    margin-top: 65px;
-    color:#01376A;
-    font-size: 13px;
-}
+.find_form{
+	   position:relative;
+display: flex;
+ align-items: center;
+	     flex-direction: column;
+ margin-top:150px;
+	}
 .join_wrapper2{
-    position:absolute;
+    position:relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-  	width:330px;
-    height:380px;
+  	width:500px;
+    height:580px;
     top:50%;
     left:50%;
-    margin: -175px 0px 0px -190px;
+    margin: -475px 0px 0px -190px;
     background-color:white;
+    
     }
 .join_form{
     display:flex;
      align-items: center;
     flex-direction: column;
     width:600px;
+    height:230px;
     margin-top:10px;
+    margin-left: -100px;
+     background-color: #ffffff;
+  border: 1px solid #dadada; /*  */
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    
 }
-
- .login_button {
-  --bs-btn-font-weight: 600;
-  --bs-btn-color: var(--bs-white);
-  --bs-btn-bg: var(--bd-violet-bg);
-  --bs-btn-border-color: var(--bd-violet-bg);
-  --bs-btn-hover-color: var(--bs-white);
-  --bs-btn-hover-bg: #{shade-color($bd-violet, 10%)};
-  --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
-  --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-  --bs-btn-active-color: var(--bs-btn-hover-color);
-  --bs-btn-active-bg: #{shade-color($bd-violet, 20%)};
-  --bs-btn-active-border-color: #{shade-color($bd-violet, 20%)};
+.join_form2{
+    display:flex;
+     align-items: center;
+    flex-direction: column;
+    width:600px;
+    height:300px;
+    margin-top:10px;
+    margin-left: -100px;
+     background-color: #ffffff;
+  border: 1px solid #dadada; /*  */
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    
+}
+.join_form3{
+    display:flex;
+     align-items: center;
+    flex-direction: column;
+    width:600px;
+    height:230px;
+    margin-top:10px;
+    margin-left: -100px;
+     background-color: #ffffff;
+  border: 1px solid #dadada; /*  */
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    
 }
