--- a/src/main/WebContent/Login/text.css
+++ b/src/main/WebContent/Login/text.css
@@ -114,6 +114,46 @@ font-size :50px;
     width:600px;
     margin-top:10px;
 }
+.custom{
+	.btn-bd-primary {
+   width: 320px; /* 이미지 컨테이너 너비 설정 */
+        height: 45px; /
+  --bs-btn-color: var(--bs-white);
+  --bs-btn-bg: var(--bd-violet-bg);
+  --bs-btn-border-color: var(--bd-violet-bg);
+  --bs-btn-hover-color: var(--bs-white);
+  --bs-btn-hover-bg: #{shade-color($bd-violet, 10%)};
+  --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
+  --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+  --bs-btn-active-color: var(--bs-btn-hover-color);
+  --bs-btn-active-bg: #{shade-color($bd-violet, 20%)};
+  --bs-btn-active-border-color: #{shade-color($bd-violet, 20%)};
+}
+	
+
+ .btn {
+    width: 300px;
+    height: 45px;
+    border: none !important;
+}
+
+.kakao, .kakao1 {
+    border: none !important;
+    width: 350px;
+    height: 45px;
+   
+    background-color: transparent;
+    cursor: pointer;
+    padding: 0;
+    margin-bottom: 10px;
+}
+
+.kakao img, .kakao1 img {
+    border: none;
+    width: 100%;
+    height: 100%;
+}
+
 
  .login_button {
   --bs-btn-font-weight: 600;
