--- a/src/main/WebContent/Login/text.css
+++ b/src/main/WebContent/Login/text.css
@@ -153,6 +153,14 @@ font-size :50px;
     width: 100%;
     height: 100%;
 }
+.no-border {
+    border: none !important; /* 테두리 없음 */
+}
+
+
+
+
+
 
 
  .login_button {
