찜 기능 추가 구현

--- a/src/main/WebContent/DetailPage/DPCSS.css
+++ b/src/main/WebContent/DetailPage/DPCSS.css
@@ -134,4 +134,16 @@ table, td, th {
 }
 
 
+.btn{
+      padding: 10px 20px;
+      border: none;
+      background-color: #f2f2f2;
+      cursor: pointer;
+       }
+
+.btn.act{
+      background-color: #ff9800;
+      color: white;
+        }
+
 
