--- a/src/main/WebContent/Favor/DPCSS.css
+++ b/src/main/WebContent/Favor/DPCSS.css
@@ -7,14 +7,14 @@
 /*     align-items: center; */
      justify-content: center;
   
-  	width:300px;
-    height:120px;
+  	width:400px;
+    height:150px;
     top:50%;
     left:50%;
-    margin: -350px 0px 0px -150px;
-     background-color:gray; 
-     
-  border-radius: 20%
+    margin: -350px 0px 0px -200px;
+     background-color:white; 
+     border:1px solid gray;
+  border-radius: 15%
     }
   .left{
  /*  position: absolute; */
@@ -22,8 +22,22 @@
   white-space: nowrap;
   word-break : nowrap;
   }
+  .right{
+  align-self: flex-end; /* 오른쪽 정렬 */
+  margin-right:20px;
+  }
   .title_font{
-  width:80px;font-weight:bold;font-size:30px; white-space: nowrap;word-break : nowrap;
+  width:80px;
+  font-weight:bold;
+  font-size:30px; 
+  white-space:nowrap;
+  word-break : nowrap;
+  display:inline;
+  }
+  .nim{
+font-weight: normal;
+	font-size:15px;
+  white-space:nowrap;
   }
 .center{
   display: flex;
@@ -84,7 +98,13 @@
  border-collapse : collapse;
  };
 
-
+.visual{
+	width:100%;
+	margin:0 auto; 
+	max-width:1200px;}
+.visual img{
+	width:100%;
+	}
 
 @media(min-width: 640px) {
 	.grid> div{
